95: Migrate java10 demos to java12 demos, java14 to java16
Task-Url: https://github.com/unitsofmeasurement/uom-demos/issues/95